# HAMT

./: .gitignore  Build.bat  CMakeLists.txt  LICENSE  README.md  appveyor.yml
Src/: HashTrie.cpp  HashTrie.h  IdealHash.sln  IdealHash.vcxproj  IdealHash.vcxproj.filters  TestHashTrie.cpp  main.cpp
Test/: Build.bat  CMakeLists.txt  IdealHash.sln  IdealHash.vcxproj  IdealHash.vcxproj.filters  VisualStudioSettings.cmake  config.h.in  main.cpp
Test/dlmalloc/: malloc.c
cmake/: BuildSettings.cmake
include/: HashTrie.h
src/: CMakeLists.txt  HashTrie.cpp
